--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -1,4 +1,4 @@
-name: MacOS Build for Otomatik İzleme
+name: MacOS Build for Otomatik Izleme
 
 on:
   push:
@@ -23,9 +23,9 @@ jobs:
 
     - name: Build with PyInstaller
       run: |
-        pyinstaller --onefile --windowed --add-data "ding.mp3:." otomatik_izleme.py
+        pyinstaller --onefile --windowed --add-data "ding.mp3:ding.mp3" otomatik_izleme.py
 
-    - name: Upload artifact
+    - name: Upload built app as artifact
       uses: actions/upload-artifact@v3
       with:
         name: macos-app
