--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -19,6 +19,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        pip install wheel
         pip install pyinstaller easyocr pyautogui pygame pillow pynput
 
     - name: Build with PyInstaller
@@ -26,7 +27,7 @@ jobs:
         pyinstaller --onefile --windowed --add-data "ding.mp3:ding.mp3" otomatik_izleme.py
 
     - name: Upload built app as artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: macos-app
         path: dist/otomatik_izleme
